Build system has been written

--- a/src/asm/Makefile
+++ b/src/asm/Makefile
@@ -6,45 +6,61 @@
 #    By: vbrazas <vbrazas@student.unit.ua>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2017/12/28 19:24:02 by vbrazas           #+#    #+#              #
-#    Updated: 2018/07/31 13:08:12 by vbrazas          ###   ########.fr        #
+#    Updated: 2018/07/31 12:32:40 by vbrazas          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-ASM = asm
-VM = corewar
+NAME = asm
 
-SRC_PATH = src/
-ASM_PATH = $(SRC_PATH)asm/
-VM_PATH = $(SRC_PATH)vm/
+SRC_PATH = 
+LIB_PATH = ../../ft_printf/
+INC_PATH = ../../includes/
+OBJ_PATH = obj/
+
+C = clang
+WFLAGS = #-Wall -Werror -Wextra
+IFLAGS = -I $(INC_PATH) -I $(LIB_PATH)
+
+LIB = $(LIB_PATH)libftprintf.a
+FILES = main
+
+SRCS = $(addprefix $(SRC_PATH), $(addsuffix .c, $(FILES)))
+OBJ = $(addprefix $(OBJ_PATH), $(SRCS:%.c=%.o))
 
 
-all: $(ASM) $(VM)
+all: $(NAME)
 
-$(ASM):
-	make -C $(ASM_PATH)
-	mv $(ASM_PATH)$(ASM) .
+$(NAME): $(LIB) $(OBJ)
+	$(C) $(WFLAGS) $(IFLAGS) $(OBJ) $(LIB) -o $(NAME) 
 
-$(VM):
-	make -C $(VM_PATH)
-	mv $(VM_PATH)$(VM) .
+$(LIB):
+	make -C $(LIB_PATH)
+
+$(OBJ): | $(OBJ_PATH)
+
+$(OBJ_PATH):
+	mkdir -p $(OBJ_PATH)$(SRC_PATH)
+
+$(OBJ_PATH)%.o: %.c
+	$(C) $(WFLAGS) $(IFLAGS) -c $< -o $@
 
 clean:
-	make clean -C $(ASM_PATH)
-	make clean -C $(VM_PATH)
+	make clean -C $(LIB_PATH)
+	rm -f $(OBJ)
 
 fclean:
-	make fclean -C $(ASM_PATH)
-	make fclean -C $(VM_PATH)
+	make fclean -C $(LIB_PATH)
+	rm -f $(NAME)
+	rm -rf $(OBJ_PATH)
 
 re: fclean all
 
 mclean:
-	make mclean -C $(ASM_PATH)
-	make mclean -C $(VM_PATH)
+	rm -f $(OBJ)
 
 mfclean:
-	make mfclean -C $(ASM_PATH)
-	make mfclean -C $(VM_PATH)
+	rm -f $(NAME)
+	rm -rf $(OBJ_PATH)
 
 mre: mfclean all
 
