--- a/src/vm/Makefile
+++ b/src/vm/Makefile
@@ -6,7 +6,7 @@
 #    By: vbrazas <vbrazas@student.unit.ua>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2018/08/02 18:58:59 by vbrazas           #+#    #+#              #
-#    Updated: 2018/08/04 20:06:22 by vbrazas          ###   ########.fr        #
+#    Updated: 2018/08/05 21:16:50 by vbrazas          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,39 +15,34 @@ NAME = corewar
 SRC_PATH = src/
 LIB_PATH = ../../ft_printf/
 OBJ_PATH = .obj/
-# OBJ_PATH = .dep/
 
 CC = clang
-CFLAGS = -Wall -Werror -Wextra
+CFLAGS = #-Wall -Werror -Wextra
 
 INC_PATH = includes/
 IFLAGS = -I ../../$(INC_PATH) -I $(INC_PATH) -I $(LIB_PATH)
 
+HFILES = vm
+FILES = vm errors utils args_parsing fill_the_map carriage
 LIB = $(LIB_PATH)libftprintf.a
-FILES = main utils fill_the_map
 
+HDRS = $(addprefix $(INC_PATH), $(addsuffix .h, $(HFILES)))
 SRCS = $(addprefix $(SRC_PATH), $(addsuffix .c, $(FILES)))
 OBJS = $(addprefix $(OBJ_PATH), $(SRCS:%.c=%.o))
-# DEPS = $(SRCS:.c=.d)
 
 
 all: $(NAME)
 
-$(NAME): $(LIB) $(OBJ_PATH) $(DEP_PATH) $(OBJS)
+$(NAME): $(LIB) $(OBJ_PATH) $(OBJS)
 	$(CC) $(CFLAGS) $(IFLAGS) $(OBJS) $(LIB) -o $(NAME) 
 
 $(LIB): 
 	make -C $(LIB_PATH)
 
-# -include $(DEPS)
-
 $(OBJ_PATH):
 	mkdir -p $(OBJ_PATH)$(SRC_PATH)
-# $(DEP_PATH):
-#	mkdir -p $(DEP_PATH)$(SRC_PATH)
-$(OBJ_PATH)%.o: %.c
+$(OBJ_PATH)%.o: %.c $(HDRS)
 	$(CC) $(CFLAGS) $(IFLAGS) -c $< -o $@
-# 	$(CC) $(CFLAGS) $(IFLAGS) -MM $< > $*.d
 
 clean: mclean
 	make clean -C $(LIB_PATH)
