--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,3 @@
-# My addings
-.*
-_*
-test
-task
-obj
-asm
-corewar
-!src/asm
-
 # Prerequisites
 *.d
 .*
@@ -61,3 +51,13 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# My addings
+_*
+test*
+task
+obj
+asm
+corewar
+!src/asm
+*champs*
