Main cycle probably works done

--- a/src/vm/Makefile
+++ b/src/vm/Makefile
@@ -1,11 +1,12 @@
 # **************************************************************************** #
+#                                                                              #
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
 #    By: vbrazas <vbrazas@student.unit.ua>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2018/08/02 18:58:59 by vbrazas           #+#    #+#              #
-#    Updated: 2018/08/13 19:52:44 by vbrazas          ###   ########.fr        #
+#    Created: 2018/08/13 19:52:44 by vbrazas           #+#    #+#              #
+#    Updated: 2018/08/16 22:48:59 by vbrazas          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -22,9 +23,10 @@ CFLAGS = #-Wall -Werror -Wextra
 INC_PATH = includes/
 IFLAGS = -I ../../$(INC_PATH) -I $(INC_PATH) -I $(LIB_PATH)
 
-HFILES = vm
-FILES = vm errors utils args_parsing fill_the_map carriage main_cycle_funcs carriage_utils
-OPERATIONS = add aff and ld ldi lfork live lld lldi op_fork or st sti sub xor zjmp
+HFILES =		vm
+FILES =			vm errors utils args_parsing fill_the_map carriage carriage_utils main_cycle_funcs
+OPERATIONS =	add aff and ld ldi lfork live lld lldi op_fork or st sti sub xor zjmp
+
 LIB = $(LIB_PATH)libftprintf.a
 
 HDRS = $(addprefix $(INC_PATH), $(addsuffix .h, $(HFILES)))
